Fix title spacing

--- a/public/global.css
+++ b/public/global.css
@@ -28,6 +28,7 @@ h1 {
     text-transform: uppercase;
     font-size: 4em;
     font-weight: 100;
+    margin-bottom: 65px;
 }
 
 ul {
